#fix -- margin on mobile

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -101,28 +101,7 @@ main
   width: 100%
   max-width: 1300px
   min-height: 100vh
-    padding: 0px 150px
-
-  @media (max-width: 1080px) 
-    padding: 0px 100px
-  
-  @media (max-width: 768px) 
-    padding: 0px 50px
-  
-  @media (max-width: 480px) 
-    padding: 0px 25px
-
-  /// removed padding before footer.
-  // padding: 200px 150px
-
-  // @media (max-width: 1080px) 
-  //   padding: 200px 100px
-  
-  // @media (max-width: 768px) 
-  //   padding: 150px 50px
-  
-  // @media (max-width: 480px) 
-  //   padding: 125px 25px
+  padding: 0 clamp(0.5em, 3vw, 3em)
   
   &.fill-height 
     padding: 0 150px
